Backports for Wazuh 3.12.0 [6.8.7] (#2132)
* Remove console.log

* Navigate from agents dashboard

* Change state by props

* Fix settings-wizard

* Fix when joinning hosts and registry

* Check for new API entries

* Close add api component

* Remove await

* Improve checks for new apis

* Test if API is down in wazuh-api

* Check down APIs

* Api is down component finish

* Transform hosts in the backend

* Fix key

* Adapt removeOrphanentries

* Adapt settings-wizard

* Improve api-is-down component

* Change  the way to display the helpers components

* Check APIs status when get them

* Remove console.log

* Check manager sets the status to the API entry

* Prevent create wazuh-registry.json without hosts

* FIx extensions

* Add panel

* Change style for wazuh hosts

* Show add api component from the table

* Refresh API entries

* Update wazuh-hosts

* Api is down table loading effect

* Show API is down when accessing to settings if any API is up

* Update cluster info in the settings wizard

* Update Kibana version

* Refactor design of guides

* Change color

* Remove wazuh-hosts.yml

* Remove hosts from configuration

* Change foreach by for

* Solves asynchronous problem

* Adapt ruleset handler

* Upload files

* Add more modules to the guide

* Show what files were upload and hwat not

* Detail the error

* Expand fail list

* Add button to refresh lists

* Fix \n in the migration

* Fix api-count

* Back from dahsboards

* Fix typo

* Fix when getting an empty file

* Prevent empty lines in cdb lists

* Hide index pattern is there are only one

* Add missing `await`

* Fix eui loader

* Change the properties of register-agent component

Set the background to transparent
Change the title: Add => Deploy

* Add register-agent component to add user to group

* Show button in general when no agents registered

* Show button in FIM when no ag

--- a/public/directives/wz-menu/wz-menu.html
+++ b/public/directives/wz-menu/wz-menu.html
@@ -17,7 +17,7 @@
         <md-button class="wz-menu-button" ng-href="#/manager" ng-click="setMenuNavItem('manager')"
             ng-class="{'wz-menu-active': menuNavItem === 'manager' }" aria-label="Cluster tab">
             <react-component name="EuiIcon" class="kbnGlobalNavLink__euiIcon"
-            props="{type:'infraApp', color:'ghost'}" /> Management
+            props="{type:'managementApp', color:'ghost'}" /> Management
         </md-button>
 
         <md-button class="wz-menu-button" ng-href="#/agents-preview" ng-click="setMenuNavItem('agents-preview')"
