--- a/public/directives/wz-menu/wz-menu.html
+++ b/public/directives/wz-menu/wz-menu.html
@@ -62,7 +62,7 @@
 
         <!-- There's pattern and there's more than one -->
         <span ng-if="showSelector" ng-show="theresPattern && patternList && patternList.length > 1" class="small">
-            <react-component name="EuiIcon" props="{type:'ip'}" tooltip="Selected index pattern"
+            <react-component name="EuiIcon" props="{type:'stopFilled'}" tooltip="Selected index pattern"
                 tooltip-placement="bottom" />
             <select class="wz-menu-select" ng-model="currentSelectedPattern"
                 ng-change="changePattern(currentSelectedPattern)" aria-label="Index pattern selector"
