--- a/public/directives/wz-menu/wz-menu.html
+++ b/public/directives/wz-menu/wz-menu.html
@@ -57,8 +57,9 @@
     
             <!-- There's pattern and there's more than one -->
             <span ng-if="showSelector" ng-show="theresPattern && patternList && patternList.length > 1" class="small">
-                <react-component name="EuiIcon" props="{type:'ip'}" tooltip="Selected index pattern"
-                    tooltip-placement="bottom" />
+                <span tooltip="Selected index pattern"
+                    tooltip-placement="bottom"><svg width="16" height="16"  viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" class="euiIcon euiIcon--medium euiIcon-isLoaded" focusable="false" role="img" aria-hidden="true"><path d="M12 2a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h8zm-2 3H8v6h1V9.014h1c.298-.013 2 0 2-2.018 0-1.74-1.314-1.952-1.825-1.987L10 5zM6 5H5v6h1V5zm4 .984c.667 0 1 .336 1 1.008C11 7.664 10.667 8 10 8H9V5.984z"></path></svg> 
+                </span>     
                 <select class="wz-menu-select" ng-model="currentSelectedPattern"
                     ng-change="changePattern(currentSelectedPattern)" aria-label="Index pattern selector"
                     placeholder="Index pattern">
