Solved controller issues and sidebar for discover

--- a/public/kibana-integrations/discover/application/angular/discover_legacy.html
+++ b/public/kibana-integrations/discover/application/angular/discover_legacy.html
@@ -31,6 +31,7 @@
     update-query="handleRefresh"
     update-saved-query-id="updateSavedQueryId"
     vis="vis"
+    showMain="showMain"
   >
   </discover-legacy>
 </discover-app>
